Revert "fixed alignment, modify handleFormSubmit method"

--- a/public/secret.css
+++ b/public/secret.css
@@ -24,7 +24,7 @@ label {
   margin-bottom: 10px;
 }
 
-.passphrase {
+.password {
   height: 1em;
   flex: 0 0 200px;
   margin-left: 32px;
@@ -37,14 +37,14 @@ label {
 
 }
 
-.expiry {
+.timeExpiry {
   width: 3em;
   height: 1em;
   margin-left: 195px;
 
 }
 
-.expiryUnit {
+.timeLength {
   margin-left: 455px;
 
 }
@@ -65,3 +65,5 @@ h2 {
   margin-left: 400px;
   display: inline;
 }
+
+
